# 2023-project-Thomig

./: CMakeLists.txt  ProjectReport.docx  README.md  ScoreBoard.txt  main.cpp
Game Representation/: Camera.cpp  Camera.h  ConcreteFactory.cpp  ConcreteFactory.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  RenderWindow.cpp  RenderWindow.h  State.cpp  State.h  StateManager.cpp  StateManager.h
Game Representation/Entities/: BananaView.cpp  BananaView.h  CoinView.cpp  CoinView.h  FruitView.cpp  FruitView.h  GhostView.cpp  GhostView.h  PacManView.cpp  PacManView.h  WallView.cpp  WallView.h
Game Representation/States/: GameOverState.cpp  GameOverState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  VictoryState.cpp  VictoryState.h
Levels/: Level1.txt  Level2.txt  Level3.txt
Logic Library/: AbstractFactory.cpp  AbstractFactory.h  Entity.cpp  Entity.h  EntityModel.cpp  EntityModel.h  LevelStats.cpp  LevelStats.h  Observer.cpp  Observer.h  Random.cpp  Random.h  Score.cpp  Score.h  ScoreBoard.txt  Stats.cpp  Stats.h  StopWatch.cpp  StopWatch.h  World.cpp  World.h
Logic Library/Entities/: BananaModel.cpp  BananaModel.h  Coin.cpp  Coin.h  CoinModel.cpp  CoinModel.h  Fruit.cpp  Fruit.h  FruitModel.cpp  FruitModel.h  Ghost.cpp  Ghost.h  GhostModel.cpp  GhostModel.h  PacManModel.cpp  PacManModel.h  Pacman.cpp  Pacman.h  Wall.cpp  Wall.h  WallModel.cpp  WallModel.h
